--- a/Second.html
+++ b/Second.html
@@ -1,2 +1,3 @@
 This is Second feature file.
 Edit done to check for comapre and pull and then merge.
+This line is added to check conflict.This is Third line in main Branch.
