--- a/Second.html
+++ b/Second.html
@@ -1,2 +1,3 @@
 This is Second feature file.
 Edit done to check for comapre and pull and then merge.
+This is to check the Conflcts .This is THird line in fourth.html.
