--- a/Second.html
+++ b/Second.html
@@ -1,7 +1,5 @@
 This is Second feature file.
 Edit done to check for comapre and pull and then merge.
-
-This is to check the Conflcts .This is THird line in fourth.html.
-
+This is to check the Conflcts .This is THird line in fourth.html
 This line is added to check conflict.This is Third line in main Branch.
-
+Adding a new line to check for local merge conflict on terminal.
