--- a/Second.html
+++ b/Second.html
@@ -1,4 +1,4 @@
-This is Second feature file.
+This is Second feature file and now lets see does it impact local merge on terminal.
 Edit done to check for comapre and pull and then merge.
 This is to check the Conflcts .This is THird line in fourth.html
 This line is added to check conflict.This is Third line in main Branch.
