--- a/Second.html
+++ b/Second.html
@@ -3,3 +3,4 @@ Edit done to check for comapre and pull and then merge.
 This is to check the Conflcts .This is THird line in fourth.html
 This line is added to check conflict.This is Third line in main Branch.
 Adding a new line to check for local merge conflict on terminal.
+Addind one line more.
