--- a/Thirdfile.html
+++ b/Thirdfile.html
@@ -1,2 +1,2 @@
 This is my third file and edited on GUI. Editing this to check for confllict
-Again checking on GUI.
+Again checking on GUI.Checking again and again
